src/CSS/BigProjectCard.module.css
@import "./vars.css";

.container {
  position: relative;
  width: 800px;
  height: 700px;
  cursor: pointer;
  perspective: 1000px;
}

.container:hover {
  opacity: 0.9;
}

.flipWrapper {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: transform 0.8s;
}

.flipWrapper.flipped {
  transform: rotateY(180deg);
}

.cardFront,
.cardBack {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 4px;
  background: linear-gradient(180deg, var(--color-dark) 0%, #09235300 100%);
  box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  backface-visibility: hidden;
  transition: transform 0.8s;
}

.cardBack {
  transform: rotateY(180deg);
  background: var(--color-secondary);
}

.img {
  width: 100%;
  height: 100%;
  border-radius: 10px 0 0 10px;
  position: relative;
  /* clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); */
  box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.1);
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 1rem;
  height: 90%;
  gap: 2rem;
}

.title {
  font-size: 3rem;
  font-weight: bold;
  margin-bottom: 0.5rem;
  font-family: var(--font-headings);
  text-shadow: 4px 5px rgba(0, 0, 0, 0.1);
}

.subheading {
  font-size: 1.1rem;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: light;
}

.skillsList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.skill {
  font-size: 15px;
  color: var(--color-text);
  border-radius: 100px;
  background-color: var(--color-secondary);
  padding: 6px 8px;
  width: fit-content;
  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.028);
}

.arrow {
  font-size: 4em;
  padding-bottom: 8px;
  color: var(--color-text);
  filter: drop-shadow(2px 2px 2px var(--color-dark));
}

.logo {
  width: 95px;
  align-self: center;
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
}

.description {
  font-size: 1em;
  color: black;
  font-weight: lighter;
  line-height: 1.2;
}

.listItem {
  font-size: 15px;
  color: rgb(73, 73, 73);
  list-style-position: inside;
  font-weight: lighter;
}

.list li {
  padding: 10px 15px;
  border-radius: 3px;
  margin: 2px;
}

.list li:nth-child(1) {
  background: hsl(47, 82%, 81%);
}
.list li:nth-child(2) {
  background: hsl(47, 82%, 81%, 0.9);
}
.list li:nth-child(3) {
  background: hsl(47, 82%, 81%, 0.8);
}
.list li:nth-child(4) {
  background: hsl(47, 82%, 81%, 0.7);
}
.list li:nth-child(5) {
  background: hsl(47, 82%, 81%, 0.6);
}
.list li:nth-child(6) {
  background: hsl(47, 82%, 81%, 0.5);
}

.link {
  text-decoration: none;
  color: var(--color-dark);
  font-size: 12px;
  background-color: #ffffff80;
  border-radius: 100px;
  padding: 6px 8px;
}

.link:hover {
  background-color: #fff;
}

@media (max-width: 1630px) {
  .container {
    width: 700px;
    height: 600px;
  }
}

@media (max-width: 1450px) {
  .container {
    width: 600px;
    height: 500px;
  }

  .description {
    font-size: 0.9em;
  }

  .listItem {
    font-size: 13px;
  }

  .logo {
    width: 60px;
  }

  .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
    height: 90%;
    gap: 0.8rem;
  }

  .list li {
    padding: 8px 12px;
    border-radius: 3px;
    margin: 2px;
  }
}

@media (max-width: 1225px) {
  .container {
    width: 500px;
    height: 400px;
  }

  .description {
    font-size: 0.7em;
  }

  .listItem {
    font-size: 11px;
  }

  .logo {
    width: 40px;
  }

  .content {
    gap: 0.7rem;
  }

  .list li {
    padding: 7px 10px;
  }

  .arrow {
    font-size: 3em;
  }
}

@media (max-width: 1025px) {
  .container {
    width: 600px;
    height: 500px;
  }

  .description {
    font-size: 0.9em;
  }

  .img {
    width: 60%;
  }

  .listItem {
    font-size: 13px;
  }

  .logo {
    width: 60px;
  }

  .content {
    gap: 0.8rem;
  }

  .list li {
    padding: 8px 12px;
  }
}

@media (max-width: 620px) {
  .subheading {
    font-size: 0.8em;
  }

  .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 5px 10px;
    height: 90%;
    gap: 0.8rem;
  }

  .container {
    width: 450px;
    height: 300px;
    gap: 0.5rem;
  }

  .title {
    font-size: 1.8em;
  }

  .skillsList {
    gap: 0.5rem;
  }

  .skill {
    padding: 4px 6px;
    font-size: 12px;
  }

  .description {
    font-size: 0.7em;
  }

  .listItem {
    font-size: 9px;
    font-weight: bold;
    line-height: 1.2;
  }

  .logo {
    width: 30px;
  }

  .content {
    gap: 0.3rem;
  }

  .list li {
    padding: 7px 10px;
  }

  .arrow {
    font-size: 1.5em;
    padding: 0;
  }
}

@media (max-width: 450px) {
  .container {
    width: 320px;
    height: 680px;
  }

  .cardFront,
  .cardBack {
    flex-direction: column;
    text-align: center;
  }

  .content {
    text-align: center;
  }

  .img {
    width: 100%;
    height: 380px;
    border-radius: 10px 10px 0px 0px;
    object-fit: cover;
    object-position: center center;
  }

  .skillsList {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .arrow {
    align-self: center;
  }
}

